force-app/main/default/objects/OpportunityTeamMember/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>EN-101</description>
    <formula>IF(User.IsActive , &apos;True&apos;, &apos;False&apos;)</formula>
    <label>Active</label>
    <type>Text</type>
</CustomField>