force-app/main/default/objects/OpportunityTeamMember/fields/User_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>User_Business_Unit__c</fullName>
    <description>EN-101</description>
    <formula>TEXT(User.Business_Unit__c)</formula>
    <label>User Business Unit</label>
    <type>Text</type>
</CustomField>