force-app/main/default/objects/OpportunityTeamMember/fields/User_CIB_Global_Area__c.field-meta.xml
<CustomField>
    <fullName>User_CIB_Global_Area__c</fullName>
    <description>EN-101</description>
    <formula>TEXT(User.User_CIB_Global_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User CIB Global Area</label>
    <type>Text</type>
</CustomField>