force-app/main/default/objects/OpportunityTeamMember/fields/User_City__c.field-meta.xml
<CustomField>
    <fullName>User_City__c</fullName>
    <description>EN-101</description>
    <formula>User.City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User City</label>
    <type>Text</type>
</CustomField>