force-app/main/default/objects/OpportunityTeamMember/fields/User_Country__c.field-meta.xml
<CustomField>
    <fullName>User_Country__c</fullName>
    <description>EN-101</description>
    <formula>User.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Country</label>
    <type>Text</type>
</CustomField>