force-app/main/default/objects/OpportunityTeamMember/fields/User_Division__c.field-meta.xml
<CustomField>
    <fullName>User_Division__c</fullName>
    <description>EN-101</description>
    <formula>TEXT(User.User_Division__c )</formula>
    <label>User Division</label>
    <type>Text</type>
</CustomField>