force-app/main/default/objects/OpportunityTeamMember/fields/User_Franco__c.field-meta.xml
<CustomField>
    <fullName>User_Franco__c</fullName>
    <description>EN-101</description>
    <formula>TEXT(User.User_Franco__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Franco</label>
    <type>Text</type>
</CustomField>