force-app/main/default/objects/OpportunityTeamMember/fields/User_State__c.field-meta.xml
<CustomField>
    <fullName>User_State__c</fullName>
    <description>EN-101</description>
    <formula>User.User_State_Province__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User State/Province</label>
    <type>Text</type>
</CustomField>