force-app/main/default/objects/OpportunityTeamMember/fields/User_Team__c.field-meta.xml
<CustomField>
    <fullName>User_Team__c</fullName>
    <description>EN-101</description>
    <formula>TEXT(User.User_Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Team</label>
    <type>Text</type>
</CustomField>